<resources>
    <string name="facebook_app_id">1386530961645624</string>
    <string name="app_name">Bruxie</string>
    <string name="imagecontent">a</string>
    <string name="viewrewards">VIEW REWARDS</string>
    <string name="referafriend">REFER A FRIEND</string>
    <string name="socialize">SOCIALIZE</string>
    <string name="whackamel">Whack-\na-Mel</string>
    <string name="howtogetrewards">HOW TO GET REWARDS</string>
    <string name="eatenjoy">Enjoy a healthy and delicious meal at Corner Bakery Cafe. Save your receipt.</string>
    <string name="snaptakepic">Take a picture of your receipt to earn Corner Bakery Cafe Rewards points</string>
    <string name="claimuseyour">Use your points to get awesome rewards!</string>
    <string name="earnpoints">EARN POINTS</string>
    <string name="selectlocationtosubmitreceipt">SELECT LOCATION TO SUBMIT RECEIPT</string>
    <string name="tapbuttontosendlovetext">Tap button to send the <i>Love</i></string>
    <string name="aboutroti">ABOUT ROTI</string>
    <string name="locations">LOCATIONS</string>
    <string name="Back">Back</string>
    <string name="rewaredsmore">Redeem the Love</string>
    <string name="rewards_page_redeem_text">Redeem the <i>LOVE</i>\n(in-store only)</string>
    <string name="rewardspoints">Your total points</string>
    <string name="viewactivity">View activity</string>
    <string name="faqinfo">FAQ</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="contactus">CONTACT US</string>
    <string name="signupemail">Sign up with email</string>
    <string name="email">EMAIL</string>
    <string name="firstname">First Name*</string>
    <string name="lastname">Last Name*</string>
    <string name="password">Password</string>
    <string name="forgotpassword">Forgot your password?</string>
    <string name="privacy">Privacy policy</string>
    <string name="terms">Terms of Use</string>
    <string name="sep"> | </string>
    <string name="loginplease">PLEASE LOG IN</string>
    <string name="promogot">Got a promo code from us?</string>
    <string name="promoenter">Please enter your code here.</string>
    <string name="promoCase">(Case sensitive. No spaces.)</string>
    <string name="promoContact">Code not working? </string>
    <string name="promocode_edit_contactus_link">Contact Us.</string>
    <string name="promocode">PROMO CODE</string>
    <string name="promocodeinfo">PROMO CODE</string>
    <string name="myaccount">MY ACCOUNT</string>
    <string name="oldpassword">OLD PASSWORD</string>
    <string name="newpassword">NEW PASSWORD</string>
    <string name="repeatpassword">REPEAT PASSWORD</string>
    <string name="termsofuse">Terms of Use </string>
    <string name="termsofusecontent">Terms of Use Page </string>
    <string name="FOODTHATLOVESYOUbACK">FOOD THAT LOVES YOU BACK</string>
    <string name="AboutUsQ">Is there any human emotion more powerful than love?</string>
    <string name="AboutText" formatted="false">Corner Bakery Cafe is the perfect place to feed your cravings.\n\nWe’re serving up your favorites like made-to-order scramblers, grilled panini, hand tossed salads, homemade soups, hearty pastas and freshly baked sweets.  Stop by today and enjoy all of the flavors you crave.</string>
    <string name="WELCOMETOROTI">WELCOME TO ROTI</string>
    <string name="HAVEAREFERRAL">HAVE A REFERRAL?</string>
    <string name="tapfbbutton">Tap the button to continue without a referral code</string>
    <string name="Refercodeoptional">REFERRAL CODE (OPTIONAL)</string>
    <string name="SIGNUPWITHEMAIL">Sign up with Email</string>
    <string name="PLEASELOGIN">PLEASE LOG IN</string>
    <string name="LOGOUT">Logout</string>
    <string name="LOGIN">Login</string>
    <string name="ChangePassword">Reset password</string>
    <string name="signuptermstext">By clicking the \"Sign in\" or \"Sign up\" buttons\nyou are indicating that you have read and agree to the                             </string>
    <string name="signuptermstextterms">Terms of Use</string>
    <string name="signuptermstextand"> and </string>
    <string name="signuptermstextpolicy">Privacy Policy.</string>
    <string name="promocode_page_title">Promo Code</string>
    <string name="locationinfo">LOCATIONS</string>
    <string name="receipt_rejected">Your Receipt was rejected. Please contact support for more details.</string>
    <string name="receipt_receive">Your receipt has been received. We will begin processing the image soon.</string>
    <string name="receipt_process">Your receipt is processed and pending decision.</string>
    <string name="info_how_to_receive_love">How to receive some <i>Love</i></string>
    <string name="text_snap">Take a picture of your receipt \nand submit it to earn \nCorner Bakery Cafe Love and more</string>
    <string name="chooseuptothree">CHOOSE UPTO THREE</string>
    <string name="daysleft">DAYS LEFT</string>
    <string name="doacharity">DO A CHARITY RUN/WALK</string>
    <string name="eatatzoes">EAT AT ROTI</string>
    <string name="returningusers">RETURNING USERS</string>
    <string name="enteremal">Enter your Email</string>
    <string name="tweet">Tweet</string>
    <string name="postfb">Post to Facebook</string>
    <string name="cancel">Cancel</string>
    <string name="freebr">FREE</string>
    <string name="mygoodiesredeam">Tap the buttons below to redeem or remove</string>
    <string name="takehome">TAKE HOME TUB</string>
    <string name="choiceofentree">CHOICE OF ENTEREE</string>
    <string name="num5">5</string>
    <string name="x">X</string>
    <string name="HISTORY1">\"Life\" as we know it</string>
    <string name="showcshier">Please present this to your cashier at time of purchase. Not redeemable for cash. Non-transferable</string>
    <string name="showcshierredeemed">Your reward has been redeemed. You can no longer use this reward.</string>
    <string name="reedeemable">(REEDEEMABLE IN-STORE)</string>
    <string name="storeaddress">a </string>
    <string name="timeremaining">TIME REMAINING</string>
    <string name="time">1</string>
    <string name="code">CODE: </string>
    <string name="codeval">2</string>
    <string name="reedeemd">REEDEEMD</string>
    <string name="sucess">Success</string>
    <string name="thank">Thank you!</string>
    <string name="receivedreceiptthank">We appreciate your <i>Loveback</i>.</string>
    <string name="receivedreceipt">We\'ve received your receipt.</string>
    <string name="dinein">Dine in</string>
    <string name="takeout">Take out</string>
    <string name="pleaserate">Please rate your overall experience today.</string>
    <string name="wasyourmeal">Was your meal simple, tasty, fresh?</string>
    <string name="didtheteam">Did the team share Southern Hospitality?</string>
    <string name="whatyouthink">Give us some Loveback!</string>
    <string name="phottotip">RECEIPT PHOTO TIPS</string>
    <string name="phottotip1">• Place receipt on a flat surface</string>
    <string name="phottotip2">• Use adequate lighting</string>
    <string name="phottotip3">• Make sure text is not blurry</string>
    <string name="pleaselineup">PLEASE LINE UP YOUR RECEIPT</string>
    <string name="wait">Please Wait&#8230;</string>
    <string name="uploading">We\'re uploading your receipt</string>
    <string name="Retake">Retake</string>
    <string name="Use">Use</string>
    <string name="Usesubmit">Submit</string>
    <string name="Preview">Preview</string>
    <string name="whendone">WHEN DONE, HIT BACK BUTTON</string>
    <string name="Sprinkling">Sprinkling </string>
    <string name="throughouttheweek">throughout the week can spice up any routine!</string>
    <string name="Completeagoalmight">Complete a goal might even lead to a </string>
    <string name="surprise">surprise!</string>
    <string name="Getstartedby">Get started by picking</string>
    <string name="threeareas">3 areas</string>
    <string name="tofocuson">to focus on&#8230;</string>
    <string name="taptoenlarge">(TAP TO ENLARGE)</string>
    <string name="taptoreturn">(TAP ON IMAGE TO RETURN)</string>
    <string name="goalcongratulation">Congratulations!</string>
    <string name="goaldescription">goaldescription</string>
    <string name="goaltitle">goaldescription</string>
    <string name="goaltap">You\'ll get an email when your new goodie is ready to be redeemed!</string>
    <string name="claimmessageheader">Did our staff get your code?</string>
    <string name="claimmessages">Do NOT exit this page until the cashier has seen your 3-digit code. \n\nTapping \"Continue\" will return you to a prior screen. You will not be able to access this code again.</string>
    <string name="signupheader">Please confirm that your email address is  \n</string>
    <string name="signupmessages">. \n\nWe will use this email address to let you know when you have earned rewards.</string>
    <string name="zoesstoryheader">\"Life\" as we know it</string>
    <string name="signuptext">We do NOT share personally identifiable information, like your phone number or email address, with third parties. We will email you when you have earned rewards or with occasional VG offers. Your phone number may be used by our staff to help award you points at the register.</string>
    <string name="FAQQ1">How does this work?</string>
    <string name="FAQQ2">How do I know how many points I have?</string>
    <string name="FAQA2">Tap the Love tab on the navigation bar. There you can track how many points you have and how far away you are from being able to redeem the <i>Love</i>. Green-colored rewards are ready to be redeemed. Light green-colored rewards are ones you are still working towards earning – when you have enough points to redeem one of these rewards, it will turn green.</string>
    <string name="FAQQ3">How do I redeem the <i>Love</i>?</string>
    <string name="FAQA3">In the Love tab, tap on any Green-colored reward that you want to redeem and it will instantly turn into a digital reward that you can present to the cashier at check-out. Click on “Redeem the <i>Love</i>” when you are in line to order, and then “Confirm” when you are IN FRONT OF THE CASHIER. You will have a couple minutes to show the cashier your unique code.</string>
    <string name="FAQQ4">How do I use my digital voucher?</string>
    <string name="FAQA4">Just tap the blue Redeem reward button that appears after you’ve selected the reward you’d like to redeem.  Show your phone to the cashier.  Once you have redeemed your reward you cannot redeem it again until you have accumulated enough points to do so. You’ll need to be connected to your mobile network in order for the voucher to successfully be redeemed.</string>
    <string name="FAQQ5">I\'m having trouble uploading my receipt from the app. What do I do?</string>
    <string name="FAQA5">Email the image receipt to us along with your account email address (the one you use for log in) to CornerBakery@rlvt.net.</string>
    <string name="FAQQ6">Can I make some suggestions?</string>
    <string name="FAQA6">Sure! We\'d be happy to hear from you at CornerBakery@rlvt.net.</string>
    <string name="reward_acess_email">To continue sign up for the rewards program Please grant access to email address.</string>
    <string name="enterBarcodeEdit">TYPE BARCODE NUMBER</string>
    <string name="redemption_text">To Claim your Reward, ask your server for your check. Scan the barcode printed on your check and your Reward will be deducted from your check automatically.</string>
</resources>