<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phototip_relative_headertip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phototip_relative_header"
        android:layout_marginTop="-1dip" >

        <TextView
            android:id="@+id/phototip_text_phottotip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="2dip"
            android:gravity="center"
            android:text="@string/phottotip"
            android:textColor="#fff"
            android:textSize="16dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phototip_relative_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dip"
        android:background="@drawable/top_bar" >

        <TextView
            android:id="@+id/phototip_text_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:gravity="center" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/phototip_linear_parent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/phototip_relative_headertip"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/phototip_text_pleaserecipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/imagecontent"
            android:text="@string/phottotip1"
            android:textColor="@color/dark_grey_text"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/phototip_text_pleaseuse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/imagecontent"
            android:text="@string/phottotip2"
            android:textColor="@color/dark_grey_text"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/phototip_text_pleasemake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/imagecontent"
            android:text="@string/phottotip3"
            android:textColor="@color/dark_grey_text"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/imagecontent" />
    </LinearLayout>

</RelativeLayout>