<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/scan_redemption_relative_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scan_redemption_relative_header"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dp" >

            <ImageView
                android:id="@+id/pageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:id="@+id/scan_redemption_linear_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:id="@+id/textScanRedemption"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/redemption_text" />

                <ImageView
                    android:id="@+id/scanBarcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp" >

                    <EditText
                        android:id="@+id/enterBarcodeEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/scan_redemption_enter_btn"
                        android:layout_alignRight="@+id/scan_redemption_enter_btn"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/promo_btn_gray"
                        android:ellipsize="start"
                        android:gravity="center"
                        android:hint="@string/enterBarcodeEdit"
                        android:inputType="number"
                        android:maxLength="200"
                        android:padding="5dp" />

                    <ImageView
                        android:id="@+id/scan_redemption_enter_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/enterBarcodeEdit"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:contentDescription="@string/imagecontent" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>