<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/snap_start_RelativeLayout_snapstartparent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/snap_start_image_howtogetrewards"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/snappage_image_headers"
            android:layout_marginTop="-1dp"
            android:background="@drawable/bottom_bar_blank"
            android:gravity="center"
            android:text="@string/howtogetrewards"
            android:textColor="#fff"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/snappage_image_headers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dip"
            android:background="@drawable/top_bar"
            android:contentDescription="@string/imagecontent" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/snap_start_image_howtogetrewards"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp" >

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal" >

                    <LinearLayout
                        android:id="@+id/signup_linear_parent"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/titleTutorial"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:text="Earn points! Get rewards!" />

                        <TextView
                            android:id="@+id/spendText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Spend $1, Get 10 Points" />

                        <TextView
                            android:id="@+id/takeapictext"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:layout_weight="0.49"
                            android:gravity="center"
                            android:text="@string/text_snap" />

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp" >

                            <ImageView
                                android:id="@+id/imageView1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_marginRight="20dp"
                                android:layout_toLeftOf="@+id/arrow_how_to" />

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="20dp"
                                android:layout_toRightOf="@+id/arrow_how_to" />

                            <ImageView
                                android:id="@+id/arrow_how_to"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true" />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/awesomeText"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:text="User your points to get \nawesome rewards!" />

                        <ImageView
                            android:id="@+id/snap_start_text_back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="20dp" />
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout> 
